[package]
name = "input_lag_tester"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", tag = "v0.3.0-nightly-2023-10-02" }
parking_lot = "0.12.1"

[[bin]]
name = "input_lag_tester_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "input_lag_tester_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
